<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/tv_from_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_degree_brackets"
        android:layout_marginTop="@dimen/row_margin"/>
    <SeekBar
        android:id="@+id/sb_from_degree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="0"
        android:layout_marginTop="@dimen/row_margin"/>

    <TextView
        android:id="@+id/tv_to_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_degree_brackets"
        android:layout_marginTop="@dimen/row_margin"/>
    <SeekBar
        android:id="@+id/sb_to_degree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"/>

    <TextView
        android:id="@+id/tv_pivot_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pivot_x_brackets"
        android:layout_marginTop="@dimen/row_margin"/>
    <SeekBar
        android:id="@+id/sb_pivot_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"/>

    <TextView
        android:id="@+id/tv_pivot_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pivot_y_brackets"
        android:layout_marginTop="@dimen/row_margin"/>
    <SeekBar
        android:id="@+id/sb_pivot_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"/>
</LinearLayout>